Migrate MachineConfig in core